<resources>
    <string name="app_name">MapLesson1</string>
    <string name="google_maps_key">AIzaSyDx7johUefeuSV__zH6wssIvDkmL0QOJks</string>
    <string name="menu_map_location">Я здесь</string>
    <string name="menu_map_point_new">Начальная точка</string>
    <string name="menu_map_mode">Тип карты</string>
    <string name="menu_map_mode_normal">По умолчанию</string>
    <string name="menu_map_mode_satellite">Спутник</string>
    <string name="menu_map_mode_terrain">Рельеф</string>

    <string name="title">Заголовок</string>
    <string name="snippet">Краткое описание</string>
    <string name="help_title">Название маркера</string>
    <string name="help_snippet">Описание местоположения</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="help_latitude">Широта в точке установки маркера</string>
    <string name="help_longitude">Долгота в точке установки маркера</string>
    <string name="addMarker">Добавить маркер</string>
    <string name="menu_list_markers">Список маркеров</string>
    <string name="no_data_state_test">Пока нет данных</string>
    <string name="noData">Пока нет ни одного маркера</string>
    <string name="menu_map_description">Моё местоположение</string>
</resources>