<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_map_location"
        android:title="@string/menu_map_location"
        android:icon="@drawable/ic_baseline_my_location_24"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_map_list"
        android:title="@string/menu_list_markers"
        android:icon="@drawable/ic_baseline_list_24"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_map_mode_satellite"
        android:showAsAction="never"
        android:title="@string/menu_map_mode_satellite"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_map_mode_terrain"
        android:showAsAction="never"
        android:title="@string/menu_map_mode_terrain"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/menu_map_mode_default"
        android:showAsAction="never"
        android:title="@string/menu_map_mode_normal"
        tools:ignore="AppCompatResource" />
</menu>